--- a/react/src/pages/AuthPages.css
+++ b/react/src/pages/AuthPages.css
@@ -35,7 +35,7 @@
 
 /* Form group styling */
 .form-group {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     width: 100%;
 }
 
@@ -58,6 +58,7 @@
 
 .form-group input::placeholder {
     color: #95a5a6;
+    font-size: 0.95rem;
 }
 
 .form-group input:focus {
@@ -108,6 +109,22 @@
 }
 
 .auth-link-button:hover {
+    text-decoration: underline;
+}
+
+/* Link styling */
+.auth-link {
+    text-align: center;
+    margin-top: 1.5rem;
+    color: #666;
+}
+
+.auth-link span {
+    color: #FFA500;
+    cursor: pointer;
+}
+
+.auth-link span:hover {
     text-decoration: underline;
 }
 
